#225 reduced the amount of logs. Rfactored console.log statements to xdmp.trace
Added trace events
- pipes-vpp an pipes-vpp-details => all logs for the vppBackendService
- pipes-graphHelper and pipes-graphHelper-details => all logs for the pipes-graphHelper module
- pipes-coreFuntions => all logs for the coreFunctions module
- pipes-core and pipes-core-details => all logs for the core module

Also refactored the backendmodulesmanager so it deploys the custom user module when deploy to MarkLogic checkbox is ticked

--- a/java-middle-tier/build.gradle
+++ b/java-middle-tier/build.gradle
@@ -106,6 +106,9 @@ task copyDhf(type:Copy) {
 
   from "../ml-backend/src/"
   into "src/main/resources/dhf/src/"
+  outputs.upToDateWhen {
+    false
+  }
   doLast {
     logger.warn('Done copying ml-backend/src')
   }
@@ -161,6 +164,7 @@ bootJar {
 
 task runQuasarDev(type:Exec) {
   dependsOn copyLiteGraphOverride
+  dependsOn runQuasarBuild
   mustRunAfter copyLiteGraphOverride
   doFirst {
     logger.warn('Running quasar dev')
@@ -181,6 +185,8 @@ task runQuasarDev(type:Exec) {
 }
 
 task runLocal(type: JavaExec) {
+  dependsOn copyDhf
+  dependsOn addVersionToBackend
   group = "Execution"
   description = "Run the main class with JavaExecTask"
   classpath = sourceSets.main.runtimeClasspath
