--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-shortkey": "^3.1.7",
     "vue2-dropzone": "^3.6.0",
     "vuex": "^3.1.2",
+    "vuex-persistedstate": "^3.0.1",
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
