--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+java-middle-tier/test-dhf-project/src/main/ml-modules/root/custom-modules/custom/TestStep/main.sjs
 jos.sh
 .jar
 java-middle-tier/lib/
