--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-json-pretty": "^1.6.0",
     "vue-query-builder": "^0.8.2",
     "vue-shortkey": "^3.1.7",
+    "vue-template-compiler": "^2.6.12",
     "vue2-dropzone": "^3.6.0",
     "vuex": "^3.1.2",
     "vuex-persistedstate": "^3.0.1",
